2007-07-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/distmeasure.R (dissimilarity): Replaced dists call from
	package cba by new dist call from package proxy.

2007-07-10  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Described removeSparseTerms and Dictionary.

2007-06-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R: require() uses the quietly option to suppress
	loading messages.

2007-06-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/dictionary.R: Added dictionary support.

2007-06-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R: Added classes for Reuters21578 XML and RCV1
	documents. This simplifies some functions, e.g., asPlain.

2007-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Fixed some typos in vignette.

2007-06-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (replaceWords): Added method to replace a set of
	words by a single word. Useful for synonyms.

2007-05-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/TermDocMatrix.Rd: Fixed documentation on Data slot.

2007-05-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (textvector): Small fix for dealing with empty
	vectors. Thanks to Ariel Maguyon for his error report.
	(removeSparseTerms): New function to remove columns from a
	term-document matrix exceeding a sparse factor.

2007-05-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/tmUpdate.Rd: Corrected documentation on readerControl parameter.

2007-05-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/sFilter.Rd: Corrected documentation on statement format (use
	'==' instead of '=').

2007-05-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R (StructuredTextDocument): Inherits from
	TextDocument.

2007-05-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (findFreqTerms): Perform efficient computation
	on sparse matrices as proposed by Martin Maechler.

2007-04-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>
