@@ -1,10 +1,11 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.2-2
-Date: 2007-07-11
+Date: 2007-07-13
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
-Depends: filehash, Matrix, methods, proxy, Snowball, XML
+Depends: filehash, Matrix, methods, Snowball, XML
+Imports: proxy
 Suggests: Rstem (>= 0.3-1)
 Description: A framework for text mining applications within R.
 License: GPL-2
