@@ -88,6 +88,7 @@ exportMethods(
               "tmFilter",
               "tmIndex",
               "searchFullText",
+              "dim",
               "findFreqTerms",
               "findAssocs",
               "removeSparseTerms",
